CRM-1816:Refactor all grids that selects whole entity instead of required fields - all grids are refactored

--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -7,7 +7,7 @@ datagrid:
             type: orm
             query:
                 select:
-                    - e
+                    - partial e.{id, entityName}
                     - event.name as eventName
                     - event.id as eventId
                     - recipientList.owner as ownerRecipient
