--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -1,28 +1,26 @@
 oro_system_configuration:
     groups:
-        notifications:
-            icon:   icon-bullhorn
-            title:  'Notifications'
         email_notifications_settings:
-            title:  'General contact'
+            title: oro.notification.system_configuration.title
+
     fields:
         oro_notification.email_notification_sender_email:
             data_type: string
             type: email
             options:
-                label: 'Sender email'
+                label: oro.notification.system_configuration.email_notification_sender_email
         oro_notification.email_notification_sender_name:
             data_type: string
             type: text
             options:
-                label: 'Sender name'
+                label: oro.notification.system_configuration.email_notification_sender_name
     tree:
         system_configuration:
             platform:
                 children:
                     general_setup:
                         children:
-                            notifications:
+                            email_configuration:
                                 children:
                                     email_notifications_settings:
                                         children:
@@ -30,6 +28,6 @@ oro_system_configuration:
                                             - oro_notification.email_notification_sender_name
 
     api_tree:
-        notifications:
+        email_configuration:
             oro_notification.email_notification_sender_email: ~
             oro_notification.email_notification_sender_name: ~
