--- a/Resources/config/datagrid.yml
+++ b/Resources/config/datagrid.yml
@@ -98,10 +98,10 @@ datagrid:
                     type: choice
                     data_name: e.entityName
                     options:
-                        is_translated_choices: true
                         field_options:
                             multiple: true
                             choices: @oro_entity.datagrid_helper->getEntityNames
+                            translatable_options: false
 
                 eventName:
                     filter_by_having: true
