--- a/Resources/config/oro/system_configuration.yml
+++ b/Resources/config/oro/system_configuration.yml
@@ -1,4 +1,4 @@
-oro_system_configuration:
+system_configuration:
     groups:
         email_notifications_settings:
             title: oro.notification.system_configuration.title
