--- a/Resources/config/system_configuration.yml
+++ b/Resources/config/system_configuration.yml
@@ -1,4 +1,4 @@
-system_configuration:
+oro_system_configuration:
     groups:
         email_notifications_settings:
             title: oro.notification.system_configuration.title
